删除多余模块，修改git引用

--- a/block-img.html
+++ b/block-img.html
@@ -24,7 +24,7 @@
 <br>
 <div>Powered By: <span><a style="
     color: cornflowerblue;"
-    href="https://github.com/MarSeventh/CloudFlare-ImgBed">CloudFlare-ImgBed</a></span></div>
+    href="https://github.com/doulongfei/imgBed">CloudFlare-ImgBed</a></span></div>
 </div>
 
 
