--- a/whitelist-on.html
+++ b/whitelist-on.html
@@ -26,7 +26,7 @@
 <br>
 <div>Powered By: <span><a style="
     color: cornflowerblue;"
-    href="https://github.com/MarSeventh/CloudFlare-ImgBed">CloudFlare-ImgBed</a></span></div>
+    href="https://github.com/doulongfei/imgBed">CloudFlare-ImgBed</a></span></div>
 </div>
 
 
