--- a/block-img.html
+++ b/block-img.html
@@ -3,7 +3,7 @@
     height: 100%;
 ">
 <head>
-<title>The Image is blocked | CloudFlare-ImgBed</title>
+<title>The Image is blocked | CloudFlare</title>
 <meta charset="UTF-8">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=Edge">
@@ -24,7 +24,7 @@
 <br>
 <div>Powered By: <span><a style="
     color: cornflowerblue;"
-    href="https://github.com/MarSeventh/CloudFlare-ImgBed">CloudFlare-ImgBed</a></span></div>
+    href="https://www.cloudflare.com">CloudFlare</a></span></div>
 </div>
 
 
