--- a/block-img.html
+++ b/block-img.html
@@ -7,7 +7,7 @@
 <meta charset="UTF-8">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-<meta name="robots" content="noindex, nofollow">
+<meta name="robots" content="none">
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <style>body{margin:0;padding:0}</style>
 <script src="https://js.sentry-cdn.com/219f636ac7bde5edab2c3e16885cb535.min.js" crossorigin="anonymous"></script>
