--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
-<！doctype html><html lang=“”><head><meta charset=“utf-8”><meta http-equiv=“X-UA-Compatible” content=“IE=edge”><meta name=“viewport” content=“width=device-width，initial-scale=1”><link rel=“icon” href=“/logo.png”><title>Sanyue ImgHub</title><script defer=“defer” src=“/js/app.6ee1e6e7.js”></script><link href=“/css/app.def7ef9b.css” rel=“stylesheet”></head><body><很抱歉>><，如果不启用 JavaScript，sanyue_imghub 无法正常工作。请启用它以继续.</strong></noscript><div id=“app”></div></body></html>
+<!doctype html><html lang=""><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="/logo-null.png"><title>Sanyue ImgHub</title><script defer="defer" src="/js/app.88106205.js"></script><link href="/css/app.5823d4b4.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but sanyue_imghub doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div></body></html><style>/* 下拉菜单样式 */
+.el-dropdown__popper.el-popper {
+    border-radius: 12px;
+    border: none;
+    background-color: var(--popper-bg-color);
+    backdrop-filter: blur(10px);
+    box-shadow: var(--popper-shadow);
+}
+.el-dropdown__popper.el-popper .el-dropdown-menu {
+    background: none;
+    border: none;
+}
+.el-dropdown__popper.el-popper .el-dropdown-menu__item {
+    border: none;
+    background: none;
+}
+.el-popper.is-light>.el-popper__arrow::before {
+    background: none;
+    border: none;
+}
+
+/* 加载动画样式 */
+.el-loading-mask {
+    border-radius: 12px;
+}</style>
